picture update index

--- a/comp484-hw1-main/index.html
+++ b/comp484-hw1-main/index.html
@@ -41,7 +41,7 @@ rules problematic. This effort resulted in the publishing of the XHTML 1.0 speci
 the HTML elements that were seen to be dictating the presentation of content rather than the structure of it.</p>
 
 <p>
-  <img src="images/200px-W3C_icon.png"
+  <img src="images/W3C_icon.png"
        alt="W3C logo"
        width="200"
        height="136"
