--- a/comp484-hw1-main/next.html
+++ b/comp484-hw1-main/next.html
@@ -31,15 +31,15 @@
 <p><strong>Web Design related titles</strong></p>
 <p><strong>HTML specifications</strong> </p>
 <p>Although their format can be a bit hard to read initially, once you&rsquo;re familiar with them there is no better resource for learning HTML and staying current with it than reading the actual W3C specifications.</p>
-<p>HTML 4.0</p>
-<p>XHTML 1.0</p>
-<p>WHATWG HTML5</p>
-<p>W3C HTML5</p>
-<p>W3C Markup Validation Service </p>
+<p><strong>HTML 4.0</strong></p>
+<p><strong>XHTML 1.0</strong></p>
+<p><strong>WHATWG HTML5</strong></p>
+<p><strong>W3C HTML5</strong></p>
+<p><strong>W3C Markup Validation Service</strong></p>
 <p>Great for testing code and making sure you&rsquo;re writing valid HTML syntax.</p>
-<p>Mozilla Developer Network </p>
+<p><strong>Mozilla Developer Network</strong></p>
 <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
-<p>HTML5 Rocks </p>
+<p><strong>HTML5 Rocks</strong></p>
 <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
 
 </body>
